# prompts

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.config/mise/: config.toml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
agents-md/: AGENTS-MD-GUIDELINES.md  AGENTS.md
commands/: commit-groups.md  create-plan-md.md  create-skill-from-url.md  onboarding-new-agent-session.md  py-lint.md  py-run-tests.md
instructions/: commit-instructions.md
prompts/: onboarding-new-agent-session.md  py-lint.md  py-run-tests.md
skills/: AGENTS.md  rtk.skill
skills/database/database-schema/: SKILL.md  test_skill.sh
skills/database/sqlmodel/: SKILL.md
skills/development/agentic-coding/: SKILL.md
skills/development/code-auditor/: SKILL.md
skills/development/code-deduplication/: SKILL.md
skills/development/code-execution/: SKILL.md
skills/development/code-refactor/: SKILL.md
skills/development/code-transfer/: SKILL.md
skills/development/codebase-documenter/: SKILL.md
skills/development/coding-discipline/: SKILL.md
skills/development/dispatching-parallel-agents/: SKILL.md
skills/development/file-operations/: SKILL.md
skills/development/output-quality/: SKILL.md
skills/development/plan-md/: SKILL.md
skills/development/python-ultimate/: SKILL.md
skills/development/receiving-code-review/: SKILL.md
skills/documents/: README.md
skills/documents/docx-svg/: SKILL.md
skills/python/: dataclasses.md  role.md
skills/skill-creator/: SKILL.md
skills/standards/: AGENTS.md  GAPS.md
(+263 files in other folders)
